; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_vf_fps.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_vf_fps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.TYPE_3__ = type { i32 }

@M_PROPERTY_UNAVAILABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_vf_fps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_vf_fps(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.m_property*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca double, align 8
  store i8* %0, i8** %6, align 8
  store %struct.m_property* %1, %struct.m_property** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %13, %struct.TYPE_3__** %10, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %4
  %19 = load i32, i32* @M_PROPERTY_UNAVAILABLE, align 4
  store i32 %19, i32* %5, align 4
  br label %33

20:                                               ; preds = %4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %22 = call double @calc_average_frame_duration(%struct.TYPE_3__* %21)
  store double %22, double* %11, align 8
  %23 = load double, double* %11, align 8
  %24 = fcmp ole double %23, 0.000000e+00
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @M_PROPERTY_UNAVAILABLE, align 4
  store i32 %26, i32* %5, align 4
  br label %33

27:                                               ; preds = %20
  %28 = load i32, i32* %8, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = load double, double* %11, align 8
  %31 = fdiv double 1.000000e+00, %30
  %32 = call i32 @m_property_double_ro(i32 %28, i8* %29, double %31)
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %27, %25, %18
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local double @calc_average_frame_duration(%struct.TYPE_3__*) #1

declare dso_local i32 @m_property_double_ro(i32, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
